CXDEVII-997: implemented a fix to handle long words spilling out of their block

--- a/layout/structure/_footer.scss
+++ b/layout/structure/_footer.scss
@@ -19,6 +19,9 @@
   @include rem('line-height', 22);
   font-family: $font_normal;
 
+// fix to wrap ong words spilling out of the div
+  -ms-word-break: break-all; word-break: break-all; /* Non standard for webkit */ word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; -ms-hyphens: auto; hyphens: auto;
+
   .region.first {
     display: table-row;
     overflow: hidden;
